--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-}
+    "builds": [{
+        "src": "TaskList/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "TaskList/wsgi.py"
+        }
+    ]
+  }
